--- a/caracas-trial.Rmd
+++ b/caracas-trial.Rmd
@@ -21,11 +21,13 @@ Below we will show a few examples, but also notice the vignettes available at ht
 
 ```{r}
 library(caracas)
+```
+
+Quick start:
+```{r}
+x <- symbol('x')
+eq <- 2*x^2 - x
+eq
 
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
